--- a/src/public/stylesheets/style.css
+++ b/src/public/stylesheets/style.css
@@ -816,8 +816,17 @@ pre[class*=language-] {
 }
 .blog-post-form-page {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
   padding-top: 1rem;
+}
+.blog-post-form-page__warning {
+  color: red;
+}
+.blog-post-form-page__after-warning {
+  display: flex;
+  width: 100%;
 }
 .blog-post-form-page__left {
   flex: 1;
