--- a/src/public/stylesheets/views/pages/_blog-post-form.scss
+++ b/src/public/stylesheets/views/pages/_blog-post-form.scss
@@ -5,8 +5,19 @@
 
 .blog-post-form-page {
   display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 100%;
-  padding-top: 1rem;
+  padding-top: 1rem; 
+
+  &__warning {
+    color: red;
+  }
+
+  &__after-warning {
+    display: flex;
+    width: 100%;
+  }
 
   &__left {
     flex: 1;
